welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: not found: value vrai
{vu = vrai}
      ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (!vu)
^